// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseSummary component renders with multiple expenses 1`] = `
<div>
  <div
    class="page-header"
  >
    <div
      class="content-container"
    >
      <h1
        class="page-header__title"
      >
        Viewing 
        <span>
          3
        </span>
         
        expenses
         totalling 
        <span>
          Rs. 127,362.74
        </span>
      </h1>
      <div
        class="page-header__actions"
      />
    </div>
  </div>
</div>
`;

exports[`ExpenseSummary component renders with single expense 1`] = `
<div>
  <div
    class="page-header"
  >
    <div
      class="content-container"
    >
      <h1
        class="page-header__title"
      >
        Viewing 
        <span>
          1
        </span>
         
        expense
         totalling 
        <span>
          Rs. 14,000.94
        </span>
      </h1>
      <div
        class="page-header__actions"
      />
    </div>
  </div>
</div>
`;
